--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "file-loader": "^6.2.0",
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "url-loader": "^4.1.1"
   }
 }
