--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-confetti": "^6.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "url-loader": "^4.1.1"
