--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.8",
     "@chakra-ui/react": "^1.4.2",
+    "@craftjs/core": "0.1.0-beta.16",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "file-loader": "^6.2.0",
@@ -20,6 +21,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "recoil": "^0.2.0",
     "url-loader": "^4.1.1"
   }
 }
