--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
+    "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
