--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@craftjs/core": "0.1.0-beta.16",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@types/styled-components": "^5.1.9",
     "file-loader": "^6.2.0",
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "recoil": "^0.2.0",
+    "styled-components": "^5.2.3",
     "url-loader": "^4.1.1"
   }
 }
