--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.1.5",
     "@types/styled-components": "^5.1.9",
     "file-loader": "^6.2.0",
+    "formik": "^2.2.6",
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
