--- a/builder/package.json
+++ b/builder/package.json
@@ -24,7 +24,9 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "swr": "^0.5.6",
     "url-loader": "^4.1.1"
