--- a/ecomerce-website/package.json
+++ b/ecomerce-website/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^1.1.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "add": "^2.0.6",
     "framer-motion": "^3.2.1",
     "next": "^12.1.6",
     "next-compose-plugins": "^2.2.1",
@@ -22,8 +23,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.1.2",
-    "swr": "^1.3.0"
+    "slick-carousel": "^1.8.1",
+    "swr": "^1.3.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "^14.14.13",
